--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -225,34 +225,35 @@ body{
     }
 
     .sidePanel .col-md-3 h1{
-        text-align: left;
         margin: 0;
         font-size: 1.1em;
         padding-left: 4%;
         padding-bottom: 2%;
         color: rgba(39,52,52,.8);
+        float: left;   
     }
 
     .sidePanel .col-md-3 h2{
-        text-align: left;
         margin: 0;
         font-size: 1.1em;
         padding-left: 4%;
         padding-bottom: 2%;
         color: rgba(0,0,0,1);
+        float: left;
     }
 
     .sidePanel .col-md-3 p{
-        text-align: left;
         margin: 0;
         padding-left: 4%;
         padding-bottom: 1%;
         color: rgba(39,52,52,.75);
+        float: left;
     }
 
     .additionalInfo {
         font-size: .9em;
         color: rgba(39,52,52,.6) !important;
+        float: left;
     }
 /*-----body panel -----*/
     .bodyPanel .col-md-9{
@@ -272,6 +273,23 @@ body{
         padding-bottom: 5%;
         padding-left: 5%;
         padding-right: 5%;
+    }
+
+    .col-md-9 #linkedImage p{
+        opacity: 0;
+    }
+
+    .col-md-9 #linkedImage p:hover{
+        opacity: 1;
+        bottom: 0;
+        color: #000;
+        font-size: 1.1em;
+        float: left !important;
+        position: absolute;
+    }
+
+    .col-md-9 #linkedImage img:hover{
+        opacity: 0.75;
     }
 
 /*------About Page------*/
