--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -24,9 +24,7 @@ body{
         opacity: 1;
         margin-bottom: 0 !important;
         padding: 0 !important;
-        border: none;
-       /* border: 0.1em dotted rgba(51,122,183,0.5) !important*/;
-        /*border-opacity: .5;*/
+        border: none !important;
     }
         .thumbnail #analysis{
             border: 0.1em dotted rgba(193,0,50,1) ;/*red*/
@@ -63,14 +61,13 @@ body{
         margin: 2% 2% 2% 2%;
     }
     h4.thumbnailQuestion{
-        color:  rgba(0,0,0,.6);
+        color:  rgba(0,0,0,.8);
         font-size: 1.4em;
         opacity: 0;
         font-weight: 1000;
-        text-transform: bold;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -65%); /*left, bottom*/  
+        transform: translate(-50%, -75%); /*left, bottom*/  
         text-align: center;
         line-height: 150%;
     }
