--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -64,6 +64,7 @@ a {
         text-transform: uppercase;
         text-align: center;
         margin: 2% 2% 2% 2%;
+        display: none;
     }
     h4.thumbnailQuestion{
         color:  rgba(0,0,0,.8);
